[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpu-fault-agent"
version = "0.1.0"
description = "CLI LangGraph agent for visible and controllable DPU embedded software fault localization."
authors = []
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "langchain-core>=1.4.0,<2",
    "langgraph",
    "langgraph-checkpoint-sqlite",
]

[project.scripts]
dpu-fault-agent = "dpu_fault_agent.cli:main"

[dependency-groups]
test = [
    "pytest",
]
lint = [
    "ruff",
    "ty",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.uv.sources]
langgraph = { path = "../langgraph", editable = true }
langgraph-checkpoint = { path = "../checkpoint", editable = true }
langgraph-checkpoint-sqlite = { path = "../checkpoint-sqlite", editable = true }
langgraph-prebuilt = { path = "../prebuilt", editable = true }
langgraph-sdk = { path = "../sdk-py", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["dpu_fault_agent"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -vv"

[tool.ruff]
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]
target-version = "py310"

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-key = "ignore"
invalid-return-type = "ignore"
missing-typed-dict-key = "ignore"
unresolved-attribute = "ignore"
